# opencv_image

./: CMakeLists.txt
src/: color_transfer.cpp  color_transfer.hpp  contrast_enhancer.cpp  contrast_enhancer.hpp  edge_detector.cpp  edge_detector.hpp  hand_segmenter.cpp  hand_segmenter.hpp  main.cpp  thread_pool.hpp
